organize files into src folder w/ subdirectories

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iamboyowa ~ ART/HEALING/MAGIC</title>
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="book.css" />
-    <link rel="stylesheet" href="sun.css" />
+    <link rel="stylesheet" href="src/css/index.css" />
+    <link rel="stylesheet" href="src/css/book.css" />
+    <link rel="stylesheet" href="src/css/sun.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,11 +15,11 @@
       rel="stylesheet"
     /> -->
     <link
-      href="google-font_Amatic SC+Cabin Sketch.css"
+      href="src/css/google-font_Amatic SC+Cabin Sketch.css"
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/x-icon" href="favicon.png" />
+    <link rel="icon" type="image/x-icon" href="src/images/favicon.png" />
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-expand-md">
       <div class="navbar-brand logo sun-container">
         <a href="">
-          <img src="favicon.png" alt="IAMBOYOWA Logo" />
+          <img src="src/images/favicon.png" alt="IAMBOYOWA Logo" />
         </a>
         <div class="sun"></div>
       </div>
@@ -99,7 +99,7 @@
               <div class="book-pages book-inner"></div>
               <div class="book-cover book-inner">
                 <img
-                  src="(just front cover) VISUAL-SLAM_300x375.jpg"
+                  src="src/images/(just front cover) VISUAL-SLAM_300x375.jpg"
                   alt="visual-slam-artpoetrybook_img"
                 />
               </div>
@@ -126,27 +126,27 @@
         <div class="slideshow">
           <img
             class="boyowa"
-            src="boyowa_painted.jpg"
+            src="src/images/boyowa_painted.jpg"
             alt="boyowa_self-portrait-painted"
           />
           <img
             class="boyowa hidden"
-            src="boyowa_guitar-stand-stage_176x176.jpg"
+            src="src/images/boyowa_guitar-stand-stage_176x176.jpg"
             alt="boyowa_standing-on-stage-guitar"
           />
           <img
             class="boyowa hidden"
-            src="boyowa_painting-palace-group_176x176.jpg"
+            src="src/images/boyowa_painting-palace-group_176x176.jpg"
             alt="boyowa_painting-palace-group_176x176"
           />
           <img
             class="boyowa hidden"
-            src="boyowa_fandango.jpg"
+            src="src/images/boyowa_fandango.jpg"
             alt="boyowa_at-fandango"
           />
           <img
             class="boyowa hidden"
-            src="boyowa_deep-freeze_132x176px.jpg"
+            src="src/images/boyowa_deep-freeze_132x176px.jpg"
             alt="boyowa_deep-freeze-festival"
           />
         </div>
@@ -271,10 +271,10 @@
           <div class="socials">
             <a
               href="javascript:delayOpen('https://www.instagram.com/iamboyowa', 500)"
-              ><img class="icon" src="instagram.png" alt=""
+              ><img class="icon" src="src/images/instagram.png" alt=""
             /></a>
             <a href="javascript:delayOpen('https://wa.me/14374324885', 500)"
-              ><img class="icon" src="whatsapp.png" alt=""
+              ><img class="icon" src="src/images/whatsapp.png" alt=""
             /></a>
           </div>
         </div>
@@ -283,13 +283,13 @@
 
     <footer class="footer">
       <img
-        src="favicon.png"
+        src="src/images/favicon.png"
         height="30px"
         width="30px"
         style="margin-right: 5px"
       />
       Copyright © <span id="year"></span> iamboyowa
     </footer>
-    <script src="index.js"></script>
+    <script src="src/js/index.js"></script>
   </body>
 </html>
