fix delayOpen js links not working on production builds

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
         <!-- <div><a href="">BLOG</a></div> -->
         <div><a href="#connect" class="text-shadow">CONNECT</a></div>
         <div>
-          <a href="javascript:delayOpen('https://linktr.ee/iamboyowa', 400)"
-            >MUSIC</a
-          >
+          <a href="javascript:void(0)" onclick="delayOpen('music', 500)">MUSIC</a>
         </div>
       </div>
 
@@ -77,7 +75,7 @@
           <div class="dropdown-divider"></div>
           <a
             class="dropdown-item_my text-shadow"
-            href="javascript:delayOpen('https://linktr.ee/iamboyowa', 400)"
+            onclick="delayOpen('music', 400)"
             >MUSIC</a
           >
         </div>
@@ -88,9 +86,7 @@
       <div id="visual-slam" class="my-container anchor">
         <!-- <img class="grain-dient" src="grain.svg" alt=""> -->
         <div class="stuff">
-          <a
-            href="javascript:delayOpen('https://www.amazon.ca/dp/1738227502', 500)"
-          >
+          <a onclick="delayOpen('amazon', 500)">
             <div class="book">
               <div class="book-back book-inner"></div>
               <div class="book-pages book-inner"></div>
@@ -110,7 +106,7 @@
             <span>
               64 pages of wonderfully awesome-packed goodness! <br /><br />
 
-              Visual art & spoken word poetry blended together. 🎭<br><br>
+              Visual art & spoken word poetry blended together. 🎭<br /><br />
 
               (some funny in there too, lol..😆) <br /><br />
               YOU WILL START TO CHANGE...<br /><br />
@@ -184,8 +180,8 @@
           </span>
 
           <span class="more-to-show"
-            >subconscious integration with the zero point field, sound healing, and
-            quantum energy work, all using his hands and voice.
+            >subconscious integration with the zero point field, sound healing,
+            and quantum energy work, all using his hands and voice.
             <br />
             <br />
             Boyowa loves to laugh, live, and joke around. Life is fun! Life is
@@ -269,12 +265,17 @@
             <button class="form-input" type="submit">Send</button>
           </form>
           <div class="socials">
-            <a
-              href="javascript:delayOpen('https://www.instagram.com/iamboyowa', 500)"
-              ><img class="icon" src="src/images/instagram.png" alt=""
+            <a onclick="delayOpen('instagram', 500)"
+              ><img
+                class="icon"
+                src="src/images/instagram.png"
+                alt="instagram-icon"
             /></a>
-            <a href="javascript:delayOpen('https://wa.me/14374324885', 500)"
-              ><img class="icon" src="src/images/whatsapp.png" alt=""
+            <a onclick="delayOpen('whatsapp', 500)"
+              ><img
+                class="icon"
+                src="src/images/whatsapp.png"
+                alt="whatsapp-icon"
             /></a>
           </div>
         </div>
