--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iamboyowa ~ ART/HEALING/MAGIC</title>
+    <link rel="icon" type="image/x-icon" href="src/images/favicon.png" />
+
     <link rel="stylesheet" href="src/css/index.css" />
     <link rel="stylesheet" href="src/css/book.css" />
     <link rel="stylesheet" href="src/css/sun.css" />
@@ -19,7 +21,7 @@
       rel="stylesheet"
     />
 
-    <link rel="icon" type="image/x-icon" href="src/images/favicon.png" />
+    <script src="src/js/index.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
@@ -291,6 +293,6 @@
       />
       Copyright © <span id="year"></span> iamboyowa
     </footer>
-    <script src="src/js/index.js"></script>
+    <script src="src/js/index-pre.js"></script>
   </body>
 </html>
