minor text display fixes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <!-- <div><a href="">BLOG</a></div> -->
         <div><a href="#connect" class="text-shadow">CONNECT</a></div>
         <div>
-          <a href="javascript:void(0)" onclick="delayOpen('music', 500)">MUSIC</a>
+          <a href="javascript:void(0)" onclick="delayOpen('music', 500)"
+            >MUSIC</a
+          >
         </div>
       </div>
 
@@ -108,7 +110,7 @@
 
               Visual art & spoken word poetry blended together. 🎭<br /><br />
 
-              (some funny in there too, lol..😆) <br /><br />
+              (some funny pages in there too, lol..😆) <br /><br />
               YOU WILL START TO CHANGE...<br /><br />
             </span>
           </div>
@@ -291,6 +293,6 @@
       />
       Copyright © <span id="year"></span> iamboyowa
     </footer>
-    <script src="src/js/index.js"></script> 
+    <script src="src/js/index.js"></script>
   </body>
 </html>
