--- a/index.html
+++ b/index.html
@@ -151,13 +151,13 @@
 
         <span class="text-break">~</span>
         <div class="desc">
-          Boyowa means 'Bringer of Joy' in the Itsekiri language of Nigeria.
+          Boyowa means 'Bringer of Joy' in the Itsekiri language of Nigeria. 🌍
           <br />
-          He was born in the UK, raised in Canada, and has been a nomad his
+          He was born in the UK👨🏿‍🏭, raised in Canada🍁, and has been a nomad his
           whole life.<br />
           <br />
-          He started writing poetry, comics, art, and music from a little boy,
-          and discovered music production in his early teens. Since then, he has
+          He started writing poetry📖, comics😆, art🎨, and music🎵 from a little boy,
+          and discovered music production🎧 in his early teens. Since then, he has
           been exploring a variety of genres and art-styles such as<span
             class="ellipsis"
             >...</span
@@ -165,28 +165,28 @@
           <span class="show-more" onclick="showMore(1)">(show more)</span>
 
           <span class="more-to-show">
-            singing, songwriting, freestyle rapping, and both visual and media
+            singing🎤, songwriting🎼, freestyle rapping🔥, and both visual and media🎭
             art design.<br />
             <br />
-            Healing has been a huge component of his life and has been the main
-            focus ever since he started meditating at age 22. <br />
-            He is very well experienced with breathwork practices,
-            transformational psychology, and is a certified Reiki Master
+            Healing💚 has been a huge component of his life and has been the main
+            focus ever since he started meditating🙏🏿 at age 22. <br />
+            He is very well experienced with breathwork😮‍💨 practices,
+            transformational psychology🪢, and is a certified Reiki Master☯️
             practitioner with years under his belt. <br />
             <br />
-            He has explored Shamanism, has been on an integrative journey with
-            nature to realizing this, and is highly experienced with various
+            He has explored Shamanism🧙🏿, has been on an integrative journey with
+            nature🌳 to realizing this, and is highly experienced with various
             forms of<span class="ellipsis">...</span>
 
             <span class="show-more" onclick="showMore(2)">(show more)</span>
           </span>
 
           <span class="more-to-show"
-            >subconscious integration with the zero point field, sound healing,
-            and quantum energy work, all using his hands and voice.
+            >subconscious integration with the zero point field♾️, sound healing🌀,
+            and quantum energy work🧬, all using his hands and voice.
             <br />
             <br />
-            Boyowa loves to laugh, live, and joke around. Life is fun! Life is
+            Boyowa loves to laugh, live, and joke around.😎 Life is fun! Life is
             candid, life is a joke (above all, lol!). <br />
             Joy is his fuel, Love is his sustenance, and connection to Source is
             at the heart of all creation. 😊
