create thanks page

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <input
               type="hidden"
               name="_next"
-              value="http://127.0.0.1:5500/thanks.html"
+              value="https://www.iamboyowa.art/thanks"
             />
             <button class="form-input" type="submit">Send</button>
           </form>
