--- a/thanks.html
+++ b/thanks.html
@@ -3,10 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thanks!</title>
+  <title>iamboyowa - Thanks!</title>
+  <link rel="stylesheet" href="src/css/google-font_Amatic SC+Cabin Sketch.css">
+  <link rel="stylesheet" href="src/css/thanks.css">
 </head>
 <body>
-  <h1>THANKS</h1>
-  <p>yaay</p>
+  <div class="everything">
+    <h1>THANKS!</h1>
+    <p>yaay</p>
+    <p>😆</p>
+    <img src="src/images/fireworks-fuchsia.gif" alt="">
+    <a class="return" href="https://www.iamboyowa.art">(Click to Return)</a>
+  </div>
 </body>
 </html>
