add website link preview image, text, and meta tags

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta property="og:title" content="iamboyowa - Home" />
+    <meta property="og:image" content="https://i.ibb.co/WstjG8j/www-iamboyowa-art-preview.jpg" />
+    <meta property="og:description" content="~ART 🎭 | HEALING 💚 | MAGIC 🧙🏿‍♂️~" />
+    <meta property="og:url" content="Https://www.iamboyowa.art" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
+    <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
+    <meta property="og:type" content="website" />
+
     <title>iamboyowa ~ ART/HEALING/MAGIC</title>
     <link rel="stylesheet" href="src/css/index.css" />
     <link rel="stylesheet" href="src/css/book.css" />
@@ -156,20 +166,18 @@
           He was born in the UK👨🏿‍🏭, raised in Canada🍁, and has been a nomad his
           whole life.<br />
           <br />
-          He started writing poetry📖, comics😆, art🎨, and music🎵 from a little boy,
-          and discovered music production🎧 in his early teens. Since then, he has
-          been exploring a variety of genres and art-styles such as<span
-            class="ellipsis"
-            >...</span
-          >
+          He started writing poetry📖, comics😆, art🎨, and music🎵 from a
+          little boy, and discovered music production🎧 in his early teens.
+          Since then, he has been exploring a variety of genres and art-styles
+          such as<span class="ellipsis">...</span>
           <span class="show-more" onclick="showMore(1)">(show more)</span>
 
           <span class="more-to-show">
-            singing🎤, songwriting🎼, freestyle rapping🔥, and both visual and media🎭
-            art design.<br />
+            singing🎤, songwriting🎼, freestyle rapping🔥, and both visual and
+            media🎭 art design.<br />
             <br />
-            Healing💚 has been a huge component of his life and has been the main
-            focus ever since he started meditating🙏🏿 at age 22. <br />
+            Healing💚 has been a huge component of his life and has been the
+            main focus ever since he started meditating🙏🏿 at age 22. <br />
             He is very well experienced with breathwork😮‍💨 practices,
             transformational psychology🪢, and is a certified Reiki Master☯️
             practitioner with years under his belt. <br />
@@ -182,8 +190,8 @@
           </span>
 
           <span class="more-to-show"
-            >subconscious integration with the zero point field♾️, sound healing🌀,
-            and quantum energy work🧬, all using his hands and voice.
+            >subconscious integration with the zero point field♾️, sound
+            healing🌀, and quantum energy work🧬, all using his hands and voice.
             <br />
             <br />
             Boyowa loves to laugh, live, and joke around.😎 Life is fun! Life is
