--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="iamboyowa - Home" />
     <meta property="og:image" content="https://i.ibb.co/WstjG8j/www-iamboyowa-art-preview.jpg" />
     <meta property="og:description" content="~ART 🎭 | HEALING 💚 | MAGIC 🧙🏿‍♂️~" />
-    <meta property="og:url" content="Https://www.iamboyowa.art" />
+    <meta property="og:url" content="https://www.iamboyowa.art" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <!-- TYPE BELOW IS PROBABLY: 'website' or 'article' or look on https://ogp.me/#types -->
