add HEALING nav link + section text

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div><a href="#whoami" class="text-shadow">WHOAMI</a></div>
         <!-- <div><a href="">BLOG</a></div> -->
         <div><a href="#connect" class="text-shadow">CONNECT</a></div>
+        <div><a href="#healing" class="text-shadow">HEALING</a></div>
         <div>
           <a href="javascript:void(0)" onclick="delayOpen('music', 500)"
             >MUSIC</a
@@ -84,6 +85,7 @@
           <a class="dropdown-item_my text-shadow" href="#visual-slam">VISUAL</a>
           <a class="dropdown-item_my text-shadow" href="#whoami">WHOAMI</a>
           <a class="dropdown-item_my text-shadow" href="#connect">CONNECT</a>
+          <a class="dropdown-item_my text-shadow" href="#healing">HEALING</a>
           <div class="dropdown-divider"></div>
           <a
             class="dropdown-item_my text-shadow"
@@ -128,7 +130,39 @@
         <div class="grain"></div>
       </div>
 
-      <!-- <div id="healing" class="container"></div> -->
+      <div id="healing" class="my-container anchor">
+        <div class="title">
+          <span class="inf">♾️</span> QUANTUM SOUND HEALING <span class="inf">♾️</span>
+        </div>
+        <div class="desc">
+          <p><i>
+            Shifting the subconscious with the voice to heal yourself from within. <br>
+            <strong>Your own Source connection already knows what to do, organically.</strong>
+          </i></p>
+          <p>I facilitate and hold a protective space for you to feel as you heal <br>
+            within our <a href="https://www.google.ca" class="text-shadow" target="_blank">2-hour session</a> structure.
+          </p>
+          <p>
+            Come as you are. 😊
+          </p>
+          <p>
+            <span class="we-can-address">
+              We can address inner wounds,<br>
+              We can address psychological problems, <br>
+              We can address patterns in your life, <br>
+              We can address physical issues. <br>
+            </span>
+            <span class="anything-really">
+              (anything really... get creative, Lol!)
+            </span>
+          </p>
+          
+          <p>
+            Whatever is ready will be released and restored, <br>
+            All in Organic order & Divine timing...💚
+          </p>
+        </div>
+      </div>
 
       <div id="whoami" class="my-container anchor">
         <div class="slideshow">
