edit and style quantum healing section - blank links

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       <div id="healing" class="my-container anchor">
         <div class="title">
-          <span class="inf">♾️</span> QUANTUM SOUND HEALING <span class="inf">♾️</span>
+          <span class="inf">♾️</span> <a>QUANTUM SOUND HEALING</a> <span class="inf">♾️</span>
         </div>
         <div class="desc">
           <p><i>
@@ -160,6 +160,10 @@
           <p>
             Whatever is ready will be released and restored, <br>
             All in Organic order & Divine timing...💚
+          </p>
+          <p>
+            <a href="https://www.google.ca" target="_blank">(Book Your FREE Consultation)</a>
+            
           </p>
         </div>
       </div>
