add links to quantum healing

--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
 
       <div id="healing" class="my-container anchor">
         <div class="title">
-          <span class="inf">♾️</span> <a>QUANTUM SOUND HEALING</a> <span class="inf">♾️</span>
+          <span class="inf">♾️</span> <a>QUANTUM HEALING</a> <span class="inf">♾️</span>
         </div>
         <div class="desc">
           <p><i>
-            Shifting the subconscious with the voice to heal yourself from within. <br>
+            Shifting the subconscious with the voice and/or massage to heal yourself from within. <br>
             <strong>Your own Source connection already knows what to do, organically.</strong>
           </i></p>
           <p>I facilitate and hold a protective space for you to feel as you heal <br>
-            within our <a href="https://www.google.ca" class="text-shadow" target="_blank">2-hour session</a> structure.
+            within our <a href="https://www.linktr.ee/iamboyowa" class="text-shadow" target="_blank">2-hour session</a> structure.
           </p>
           <p>
             Come as you are. 😊
@@ -162,8 +162,7 @@
             All in Organic order & Divine timing...💚
           </p>
           <p>
-            <a href="https://www.google.ca" target="_blank">(Book Your FREE Consultation)</a>
-            
+            <a href="https://www.linktr.ee/iamboyowa" target="_blank">(Book Your FREE Consultation)</a>
           </p>
         </div>
       </div>
