add telegram icon connect, remove whatsapp

--- a/index.html
+++ b/index.html
@@ -318,12 +318,18 @@
                 src="src/images/instagram.png"
                 alt="instagram-icon"
             /></a>
-            <a onclick="delayOpen('whatsapp', 500)"
+            <a onclick="delayOpen('telegram', 500)"
+              ><img
+                class="icon"
+                src="src/images/telegram_32x32.png"
+                alt="whatsapp-icon"
+            /></a>
+            <!-- <a onclick="delayOpen('whatsapp', 500)"
               ><img
                 class="icon"
                 src="src/images/whatsapp.png"
                 alt="whatsapp-icon"
-            /></a>
+            /></a> -->
           </div>
         </div>
       </div>
