shorten simplify quantum healing + add group img

--- a/index.html
+++ b/index.html
@@ -134,17 +134,18 @@
         <div class="title">
           <span class="inf">♾️</span> <a>QUANTUM HEALING</a> <span class="inf">♾️</span>
         </div>
+        <div class="photo-container">
+          <img
+            class="photo"
+            src="src/images/quantum-healing_264x198.jpg"
+            alt="boyowa_self-portrait-painted"
+          />
+        </div>
         <div class="desc">
           <p><i>
-            Shifting the subconscious with the voice and/or massage to heal yourself from within. <br>
+            Shifting the subconscious to heal yourself from within. <br>
             <strong>Your own Source connection already knows what to do, organically.</strong>
           </i></p>
-          <p>I facilitate and hold a protective space for you to feel as you heal <br>
-            within our <a href="https://www.linktr.ee/iamboyowa" class="text-shadow" target="_blank">2-hour session</a> structure.
-          </p>
-          <p>
-            Come as you are. 😊
-          </p>
           <p>
             <span class="we-can-address">
               We can address inner wounds,<br>
@@ -158,11 +159,10 @@
           </p>
           
           <p>
-            Whatever is ready will be released and restored, <br>
-            All in Organic order & Divine timing...💚
+            Whatever is ready 💚
           </p>
           <p>
-            <a href="https://www.linktr.ee/iamboyowa" target="_blank">(Book Your FREE Consultation)</a>
+            <a href="https://www.linktr.ee/iamboyowa" class="text-shadow" target="_blank">2-hour session structure</a> (Consult me)
           </p>
         </div>
       </div>
