modify healing link in #healing section

--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
             Whatever is ready 💚
           </p>
           <p>
-            <a href="https://www.linktr.ee/iamboyowa" class="text-shadow" target="_blank">2-hour session structure</a> (Consult me)
+            <a href="https://www.linktr.ee/iamboyowa_healing" class="text-shadow" target="_blank">
+              ~ Heal Yourself ~
+            </a>
           </p>
         </div>
       </div>
