update music nav link to iamboyowa all general linktree

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div><a href="#connect" class="text-shadow">CONNECT</a></div>
         <div><a href="#healing" class="text-shadow">HEALING</a></div>
         <div>
-          <a href="javascript:void(0)" onclick="delayOpen('music', 500)"
+          <a href="javascript:void(0)" onclick="delayOpen('linktree_all', 500)"
             >MUSIC</a
           >
         </div>
