add #music section with video to Presencia

--- a/index.html
+++ b/index.html
@@ -53,17 +53,16 @@
 
       <div id="nav-horizontal" class="links">
         <div><a href="#visual-slam" class="text-shadow">VISUAL</a></div>
-
-        <!-- <div><a href="#healing">HEALING</a></div> -->
         <div><a href="#whoami" class="text-shadow">WHOAMI</a></div>
         <!-- <div><a href="">BLOG</a></div> -->
         <div><a href="#connect" class="text-shadow">CONNECT</a></div>
         <div><a href="#healing" class="text-shadow">HEALING</a></div>
-        <div>
+        <div><a href="#music" class="text-shadow">MUSIC</a></div>
+        <!-- <div>
           <a href="javascript:void(0)" onclick="delayOpen('linktree_all', 500)"
             >MUSIC</a
           >
-        </div>
+        </div> -->
       </div>
 
       <div class="dropdown" id="nav-dropdown">
@@ -87,11 +86,12 @@
           <a class="dropdown-item_my text-shadow" href="#connect">CONNECT</a>
           <a class="dropdown-item_my text-shadow" href="#healing">HEALING</a>
           <div class="dropdown-divider"></div>
-          <a
+          <a class="dropdown-item_my text-shadow" href="#music">MUSIC</a>
+          <!-- <a
             class="dropdown-item_my text-shadow"
             onclick="delayOpen('music', 400)"
             >MUSIC</a
-          >
+          > -->
         </div>
       </div>
     </nav>
@@ -166,6 +166,23 @@
               ~ Heal Yourself ~
             </a>
           </p>
+        </div>
+      </div>
+
+      <div id="music" class="my-container anchor">
+        <div class="title">~MUSIC~</div>
+        <div class="desc">
+          Ayyyyy!...🎶🤪
+        </div>
+        <div class="music-video">
+          <iframe
+            src="https://www.youtube.com/embed/vQwDv7nq0z8">
+          </iframe>
+        </div>
+        <div class="more">
+          (More Music) -> <a class="link-discography" href="https://www.linktr.ee/iamboyowa" target="_blank" rel="noopener noreferrer">
+            ENTIRE DISCOGRAPHY
+          </a>
         </div>
       </div>
 
