add Good Friends Peru song & expand #music section to 2 videos

--- a/index.html
+++ b/index.html
@@ -174,11 +174,20 @@
         <div class="desc">
           Ayyyyy!...🎶🤪
         </div>
-        <div class="music-video">
-          <iframe
-            src="https://www.youtube.com/embed/vQwDv7nq0z8">
-          </iframe>
+
+        <div class="music-video-container">
+          <div class="music-video">
+            <iframe
+              src="https://www.youtube.com/embed/Y6NO2hSLje0">
+            </iframe>
+          </div>
+          <div class="music-video">
+            <iframe
+              src="https://www.youtube.com/embed/vQwDv7nq0z8">
+            </iframe>
+          </div>
         </div>
+
         <div class="more">
           (More Music) -> <a class="link-discography" href="https://www.linktr.ee/iamboyowa" target="_blank" rel="noopener noreferrer">
             ENTIRE DISCOGRAPHY
